--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -3,6 +3,8 @@
     <ion-list>
     <ion-toggle  ng-model="settings.enableFriends">
         Enable Friends
+		<button class="button button-positive button-block" ng-click="getContact()">   Get Contact </button>
+		<button class="button button-positive button-block" ng-click="getContacts()">   Get Contacts </button>
     </ion-toggle>
     </ion-list>
   </ion-content>
